// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options renders correctly 1`] = `
<div
  className="options firstOptionHighlighted root isFloating isHidden"
  style={null}
>
  <div
    className="bubble"
    data-bubble-container={true}
  >
    <ul
      className="ul"
    >
      <li
        aria-hidden={true}
        className="option highlightedOption"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="presentation"
      >
        home
      </li>
      <li
        aria-hidden={true}
        className="option"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="presentation"
      >
        cat
      </li>
      <li
        aria-hidden={true}
        className="option"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="presentation"
      >
        dog
      </li>
      <li
        aria-hidden={true}
        className="option"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="presentation"
      >
        fish
      </li>
      <li
        aria-hidden={true}
        className="option"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="presentation"
      >
        hide
      </li>
      <li
        aria-hidden={true}
        className="option"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="presentation"
      >
        hover
      </li>
      <li
        aria-hidden={true}
        className="option"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="presentation"
      >
        duck
      </li>
      <li
        aria-hidden={true}
        className="option"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="presentation"
      >
        category
      </li>
      <li
        aria-hidden={true}
        className="option"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="presentation"
      >
        join
      </li>
      <li
        aria-hidden={true}
        className="option"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="presentation"
      >
        paper
      </li>
      <li
        aria-hidden={true}
        className="option"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="presentation"
      >
        box
      </li>
      <li
        aria-hidden={true}
        className="option"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="presentation"
      >
        tab
      </li>
    </ul>
  </div>
  <span
    className="arrow"
    data-bubble-arrow={true}
  />
</div>
`;

exports[`Options uses render prop - optionRenderer 1`] = `
<div
  className="options firstOptionHighlighted root isFloating isHidden"
  style={null}
>
  <div
    className="bubble"
    data-bubble-container={true}
  >
    <ul
      className="ul"
    >
      <li
        aria-hidden={true}
        className="option highlightedOption"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="presentation"
      >
        <div>
          <span>
            Frankreich
          </span>
          <span>
            France
          </span>
        </div>
      </li>
      <li
        aria-hidden={true}
        className="option"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="presentation"
      >
        <div>
          <span>
            Spanien
          </span>
          <span>
            Spain
          </span>
        </div>
      </li>
      <li
        aria-hidden={true}
        className="option"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="presentation"
      >
        <div>
          <span>
            Kroatien
          </span>
          <span>
            Croatia
          </span>
        </div>
      </li>
      <li
        aria-hidden={true}
        className="option"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="presentation"
      >
        <div>
          <span>
            Vereinigten Staaten
          </span>
          <span>
            United States
          </span>
        </div>
      </li>
      <li
        aria-hidden={true}
        className="option"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="presentation"
      >
        <div>
          <span>
            Österreich
          </span>
          <span>
            Austria
          </span>
        </div>
      </li>
    </ul>
  </div>
  <span
    className="arrow"
    data-bubble-arrow={true}
  />
</div>
`;

exports[`Options uses render prop - render 1`] = `
<div
  className="options firstOptionHighlighted root isFloating isHidden"
  style={null}
>
  <div
    className="bubble"
    data-bubble-container={true}
  >
    <ul
      className="ul"
    >
      <li>
        <span>
          home
        </span>
      </li>
      <li>
        <span>
          cat
        </span>
      </li>
      <li>
        <span>
          dog
        </span>
      </li>
      <li>
        <span>
          fish
        </span>
      </li>
      <li>
        <span>
          hide
        </span>
      </li>
      <li>
        <span>
          hover
        </span>
      </li>
      <li>
        <span>
          duck
        </span>
      </li>
      <li>
        <span>
          category
        </span>
      </li>
      <li>
        <span>
          join
        </span>
      </li>
      <li>
        <span>
          paper
        </span>
      </li>
      <li>
        <span>
          box
        </span>
      </li>
      <li>
        <span>
          tab
        </span>
      </li>
    </ul>
  </div>
  <span
    className="arrow"
    data-bubble-arrow={true}
  />
</div>
`;
